--- a/first_decision/pick_sword.html
+++ b/first_decision/pick_sword.html
@@ -5,21 +5,23 @@
 </head>
 <body>
 <header>
+    <nav>
+        <a href="../index.html">First scenario</a> >
+        <span>Finding a sword</span>
+    </nav>
     <h1>Great, you found a Sword!</h1>
 </header>
 <main>
     <article>
         <section>
         <p>
-        As you continue through the left path, you get to a room where some bandit used to live, there's his bed, small furniture
-        and some sacks. You search around to see if there is something useful...
+        As you continue through the left path, you get to a room where some bandit used to live, there's his bed, small furniture and some sacks. You search around to see if there is something useful...
         </p>
         </section>
         <details>
             <summary>Bandits in Novigrad</summary>
                 <aside>
-                    <i> Novigrad city is one of the richest around the world. Of course, so much money often attracts different types of people.
-                        From simple farmers who want a better life working for the nobles to the hated bandits who spend the nights robbing and threatening rich people and 
+                    <i> Novigrad city is one of the richest around the world. Of course, so much money often attracts different types of people. From simple farmers who want a better life working for the nobles to the hated bandits who spend the nights robbing and threatening rich people and 
                         others even the poor ones.</i>
                 </aside>
         </details>
@@ -31,8 +33,8 @@
 
         <section>
             <p>
-                Its your lucky day! You found a sword in the bandits sacks. You take it with you, the sewers are a dangerous place to be unarmed.
-                You can't keep going through this path, what do you do now?
+                Its your lucky day! You found a sword in the bandits sacks. You take it with you, the sewers are a dangerous place to be unarmed.You can't keep going through this path, 
+                what do you do now?
             </p>
         </section>
         
