--- a/first_decision/second_decision/no_sword/bandit_encounter/end/bad_ending.html
+++ b/first_decision/second_decision/no_sword/bandit_encounter/end/bad_ending.html
@@ -4,18 +4,65 @@
     <title>Game over...</title>
 </head>
 <body>
+
+<header>
+    <nav>
+        <a href="../../../../../index.html">First scenario</a> >
+        <a href="../../../../drowner_encounter.html" >Drowner encounter without a sword</a> >
+        <a href="../../last_chance.html" >Last chance</a> >
+        <a href="../bandit.html" >Bandit</a>>
+        <span>Bad ending</span>
+    </nav>
     <h1>Game over...</h1>
-    <hr>
-    <p>
-       You decide to stop and tell him about the drowner. You feel like he is starting to understand you but then look at his clothes... He is a Nilfgardian and on the other side, you're a Temerian.
-       It didn't take long for the bandit to realize these too. You notice how the fury grows up in his eyes and begins to get close to you. He's fully equipped to get in the sewers while all you have is a torch.
-       There is nothing you can do about except to wait until either the drowner or the bandit gets to you....
-    </p>
-    <hr>
-    <img src = "../../../../../../images/game_over.png" alt = "Game over" width="800" height="300">
-    <br>
+</header>
+
+<main>
+    <article>
+
+        <section>
+            <p>
+                You decide to stop and tell him about the drowner. You feel like he is starting to understand you, but then you look at his clothes... He is a Nilfgaardian, 
+                and you are a Temerian.
+            </p>
+        </section>
+
+        <details>
+            <summary>An old rivalry</summary>
+            <aside>
+                <i>
+                    Nilfgaard and Temeria have been enemies for years. After the wars between the Empire and the Northern Kingdoms, many Nilfgaardians view Temerians 
+                    as rebels who stood against their expansion and the hatred still lingers.
+                </i>
+            </aside>
+        </details>
+
+        <section>
+            <p>
+                It doesn't take long for the bandit to realize it too. You notice the fury growing in his eyes as he steps closer. He's fully equipped for the dangers 
+                of the sewers, while all you have is a torch. There is nothing you can do except wait until either the drowner 
+                or the bandit reaches you...
+            </p>
+        </section>
+
+        <figure>
+            <img src="../../../../../../images/game_over.png" alt="Game over" width="800" height="300">
+            <figcaption>Some conflicts cannot be avoided.</figcaption>
+        </figure>
+
+    </article>
+</main>
+
+<nav>
     <ul>
-            <li><a href="../../../../../../index.html">Restart</a></li>    
-        </ul>
+        <li><a href="../../../../../../index.html">Restart</a></li>
+    </ul>
+</nav>
+
+<footer>
+    <p>&emsp; <time>23:45</time> - A tragic ending.</p>
+    <label for="progress">You are this close to escaping Novigrad's sewers:</label>
+    <progress id="progress" value="90" max="100">90%</progress>
+</footer>
+
 </body>
 </html>
