--- a/first_decision/second_decision/no_sword/bandit_encounter/end/good_ending.html
+++ b/first_decision/second_decision/no_sword/bandit_encounter/end/good_ending.html
@@ -1,21 +1,71 @@
 <!DOCTYPE html>
 <html>
-    <head>  
+<head>  
     <title>You made it :D</title>
-    </head>
-    <body> 
-    <h1> You made it!!!!</h1>
-    <p>
-        You decide not to pay attention to the bandit and keep running through the sewers, hoping you somehow reach the end and get back to
-        Novigrad. As you are already far from the bandit, you lister another shriek from behind, you quickly turn your head around to check
-        and look at the bandit fighting the drowner. The drowner got the bandit but he, in desperate move, grabs his knife and kills the drowner, leaving him
-        wounded but able to walk back from where he came. You decide that it isn't the best moment to worry about the other guy and keep running. As you get past
-        trash and dirty water you see a bright light that you quickly recognize, Novigrads lanterns...
-    </p>
-    <br>
-    <hr>
-    <h2>Contratulations, you made your way back to Novigrad!</h2>
-    <hr>
-    <img src = "./../../../../../../images/no_sword_good_ending.jpg" alt = "Novigrad city" width = "500" height = "300">
-    </body>
+</head>
+<body> 
+
+<header>
+    <nav>
+        <a href="../../../../../index.html">First scenario</a> >
+        <a href="../../../../drowner_encounter.html" >Drowner encounter without a sword</a> >
+        <a href="../../last_chance.html" >Last chance</a> >
+        <a href="../bandit.html" >Bandit</a> >
+        <span>Good ending</span>
+    </nav>
+    <h1>You made it!!!!</h1>
+</header>
+
+<main>
+    <article>
+
+        <section>
+            <p>
+                You decide not to pay attention to the bandit and keep running through the sewers, hoping you somehow reach the end and get back to Novigrad. As you are already far 
+                from him, you hear another shriek from behind. You quickly turn your head and see the bandit fighting the drowner.
+            </p>
+        </section>
+
+        <details>
+            <summary>A desperate clash</summary>
+            <aside>
+                <i>
+                    In the darkness of the sewers, survival often forces unlikely confrontations. Not every enemy intends to chase you  sometimes they are simply trying to survive too.
+                </i>
+            </aside>
+        </details>
+
+        <section>
+            <p>
+                The drowner wounds the bandit, but in a desperate move he grabs his knife and kills the creature. Injured but alive, he slowly walks back the way he came. 
+                You decide this is not the moment to worry about him and keep running. As you pass trash and dirty water, you finally see a bright light you recognize 
+                Novigrad's lanterns...
+            </p>
+        </section>
+
+        <section>
+            <h2>Congratulations, you made your way back to Novigrad!</h2>
+        </section>
+
+        <figure>
+            <img src="../../../../../../images/no_sword_good_ending.jpg" alt="Novigrad city" width="500" height="300">
+            <figcaption>Freedom shines at the end of the tunnel.</figcaption>
+        </figure>
+
+    </article>
+</main>
+
+<nav>
+    <ul>
+        <li><a href="../../../../../../index.html">Restart</a></li>
+    </ul>
+</nav>
+
+<footer>
+    <p>&emsp; <time>23:30</time> - Against all odds, you survived.</p>
+    <label for="progress">You are this close to escaping Novigrad's sewers:</label>
+    <progress id="progress" value="100" max="100">100%</progress>
+</footer>
+
+</body>
 </html>
