--- a/first_decision/second_decision/sword/bandit_encounter_sword/bandit_sword.html
+++ b/first_decision/second_decision/sword/bandit_encounter_sword/bandit_sword.html
@@ -1,26 +1,68 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Bandit in sight</title>
-    </head>
-    <body>
-        <header>
-        <a href="../../../../index.html">Restart</a>
-        </header>
+<head>
+    <title>Bandit in sight</title>
+</head>
+<body>
 
-        <h1>Another enemy approaches...</h1>
-        <hr>
-        
-        <p>
-            As you keep walking through the sewers and remembering what just happened behind with the drowner, you notice light ahead of you. Fueled with excitement you
-            run directly to it hoping to be finally out of the sewers, but what you find does nothing but scare you... A bandit carrying a sword and a lit torch in the sewers too.
-            What do you do about it?
-        </p>
-        <hr>
-        <img src = "../../../../images/sword_bandit.webp" alt = "Bandit encounter" width = "500" height = "300">
-        <ul>
+<header>
+    <nav>
+        <a href="../../../../index.html">First scenario</a> >
+        <a href="../../../drowner_encounter.html">Drowner encounter</a> >
+        <a href="../continue.html">Glorious victory</a> >
+        <span>New enemy ahead</span>
+    </nav>
+    <h1>Another enemy approaches...</h1>
+</header>
+
+<main>
+    <article>
+
+        <section>
+            <p>
+                As you keep walking through the sewers and remembering what just happened with the drowner, you notice light ahead of you. Fueled with excitement, 
+                you run directly toward it hoping to finally be out of the sewers.
+            </p>
+        </section>
+
+        <details>
+            <summary>Who are these bandits?</summary>
+            <aside>
+                <i>
+                    Bandits often hide in forgotten places beneath cities, using the darkness and confusion to their advantage. Not all of them fight for survival some simply enjoy the chaos.
+                </i>
+            </aside>
+        </details>
+
+        <section>
+            <p>
+                But what you find does nothing but scare you... A bandit carrying a sword and a lit torch is standing in your path. The shadows behind him dance along the sewer walls. 
+                What do you do about it?
+            </p>
+        </section>
+
+        <figure>
+            <img src="../../../../images/sword_bandit.webp" alt="Bandit encounter" width="500" height="300">
+            <figcaption>A tense encounter in the depths.</figcaption>
+        </figure>
+
+    </article>
+</main>
+
+<nav>
+    <ul>
+        <li><a href="./sword_end/bad_ending.html">Attack him</a></li>
+        <li><a href="./sword_end/good_ending.html">Ignore him and look for an exit</a></li>
         <br>
-            <li><a href = "./sword_end/bad_ending.html">A. Attack him.</a></li>
-            <li><a href = "./sword_end/good_ending.html">B. Don't pay attention to him and keep looking for an exit.</a></li>
-    </body>
+        <li><a href="../../../../index.html">Restart</a></li>
+    </ul>
+</nav>
+
+<footer>
+    <p>&emsp; <time>22:55</time> - Almost there...</p>
+    <label for="progress">You are this close to escaping Novigrad's sewers:</label>
+    <progress id="progress" value="75" max="100">75%</progress>
+</footer>
+
+</body>
 </html>
