--- a/first_decision/second_decision/sword/bandit_encounter_sword/sword_end/bad_ending.html
+++ b/first_decision/second_decision/sword/bandit_encounter_sword/sword_end/bad_ending.html
@@ -4,18 +4,63 @@
     <title>Game over...</title>
 </head>
 <body>
+
+<header>
+    <nav>
+        <a href="../../../../../index.html">First scenario</a> >
+        <a href="../../../../drowner_encounter.html">Drowner encounter</a> >
+        <a href="../../continue.html">Glorious victory</a> >
+        <a href="../bandit_sword.html">Glorious victory</a> >
+        <span>Bad ending</span>
+    </nav>
     <h1>Game over...</h1>
-    <hr>
-    <p>
-       With no hesitation you decide to quickly attack him before he does anything to you. While wielding your sword in an attack position, the bandit notices and quickly pulls out a knife you didn't see before.
-       It's now or never, you swing your sword direcly to his chest but he deflects it with his armor, leaving you unarmed... There is nothing you can do about the bandit now, how could you think you would be able to defeat him
-       with zero experience with the sword?
-    </p>
-    <hr>
-    <img src = "../../../../../images/game_over.png" alt = "Game over" width="800" height="300">
-    <br>
+</header>
+
+<main>
+    <article>
+
+        <section>
+            <p>
+                With no hesitation you decide to quickly attack him before he does anything to you. While wielding your sword in an attack position, the bandit notices and quickly pulls out 
+                a knife you didn't see before.
+            </p>
+        </section>
+
+        <details>
+            <summary>A reckless decision</summary>
+            <aside>
+                <i>
+                    Experience matters in combat. Acting purely on impulse against a trained opponent can quickly turn confidence into defeat.
+                </i>
+            </aside>
+        </details>
+
+        <section>
+            <p>
+                It's now or never. You swing your sword directly to his chest but he deflects it with his armor, leaving you unarmed... There is nothing you can do about the bandit now. 
+                How could you think you would be able to defeat him with zero experience with the sword?
+            </p>
+        </section>
+
+        <figure>
+            <img src="../../../../../images/game_over.png" alt="Game over" width="800" height="300">
+            <figcaption>Your journey ends here.</figcaption>
+        </figure>
+
+    </article>
+</main>
+
+<nav>
     <ul>
-            <li><a href="../../../../../index.html">Restart</a></li>    
+        <li><a href="../../../../../index.html">Restart</a></li>
     </ul>
+</nav>
+
+<footer>
+    <p>&emsp; <time>23:05</time> - The sewers claim another victim.</p>
+    <label for="progress">You are this close to escaping Novigrad's sewers:</label>
+    <progress id="progress" value="100" max="100">100%</progress>
+</footer>
+
 </body>
 </html>
