--- a/first_decision/second_decision/sword/bandit_encounter_sword/sword_end/good_ending.html
+++ b/first_decision/second_decision/sword/bandit_encounter_sword/sword_end/good_ending.html
@@ -1,22 +1,69 @@
 <!DOCTYPE html>
 <html>
-    <head>  
+<head>  
     <title>You made it :D</title>
-    </head>
-    <body> 
-    <h1> You made it!!!!</h1>
-    <p>
-        You decide not to pay attention to the bandit and keep walking through the sewers, hoping you somehow reach the end and get back to
-        Novigrad. As you walk past him you look back to check if he isn't following you... He is not, looks confused by the way you reacted to him but it seems he's got better places to be
-        and better things to do than bother a simple man. You keep walking through the sewers path and as you get past trash and dirty water you see a bright light that you quickly recognize, Novigrads lanterns...
-    </p>
-    <br>
-    <hr>
-    <h2>Contratulations, you made your way back to Novigrad!</h2>
-    <hr>
-    <img src = "./../../../../../images/no_sword_good_ending.jpg" alt = "Novigrad city" width = "500" height = "300">
+</head>
+<body> 
+
+<header>
+    <nav>
+        <a href="../../../../../index.html">First scenario</a> >
+        <a href="../../../../drowner_encounter.html">Drowner encounter</a> >
+        <a href="../../continue.html">Glorious victory</a> >
+        <a href="../bandit_sword.html">Glorious victory</a> >
+        <span>Good ending</span>
+    </nav>
+    <h1>You made it!!!!</h1>
+</header>
+
+<main>
+    <article>
+
+        <section>
+            <p>
+                You decide not to pay attention to the bandit and keep walking through the sewers, hoping you somehow reach the end and get back to Novigrad. As you walk past him 
+                you look back to check if he isn't following you... He is not.
+            </p>
+        </section>
+
+        <details>
+            <summary>A wise decision</summary>
+            <aside>
+                <i>
+                    Sometimes survival is not about fighting it is about knowing when not to fight. Choosing caution over pride saved your life.
+                </i>
+            </aside>
+        </details>
+
+        <section>
+            <p>
+                He looks confused by the way you reacted, but it seems he's got better places to be and better things to do than bother a simple man. You keep walking through the sewer path and as you get past trash and dirty water you see a bright light that you quickly recognize Novigrad's lanterns...
+            </p>
+        </section>
+
+        <section>
+            <h2>Congratulations, you made your way back to Novigrad!</h2>
+        </section>
+
+        <figure>
+            <img src="../../../../../images/no_sword_good_ending.jpg" alt="Novigrad city" width="500" height="300">
+            <figcaption>Freedom at last.</figcaption>
+        </figure>
+
+    </article>
+</main>
+
+<nav>
     <ul>
-            <li><a href="../../../../../index.html">Restart</a></li>    
+        <li><a href="../../../../../index.html">Restart</a></li>
     </ul>
-    </body>
+</nav>
+
+<footer>
+    <p>&emsp; <time>23:20</time> - You survived the sewers.</p>
+    <label for="progress">You are this close to escaping Novigrad's sewers:</label>
+    <progress id="progress" value="100" max="100">100%</progress>
+</footer>
+
+</body>
 </html>
