--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 <header>
-<h1>Escape from Novigrad's sewers</h1>
+    <nav>
+        <span>First scenario</span>
+    </nav>
+    <h1>Escape from Novigrad's sewers</h1>
 </header>
 <main>
     <article>
