--- a/first_decision/second_decision/no_sword/bandit_encounter/bandit.html
+++ b/first_decision/second_decision/no_sword/bandit_encounter/bandit.html
@@ -1,28 +1,66 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Bandit in sight</title>
-    </head>
-    <body>
-        <header>
-        <a href="../../../../index.html">Restart</a>
-        </header>
+<head>
+    <title>Bandit in sight</title>
+</head>
+<body>
+    <nav>
+        <a href="../../../../index.html">First scenario</a> >
+        <a href="../../../drowner_encounter.html" >Drowner encounter without a sword</a> >
+        <a href="../../no_sword/last_chance.html" >Last chance</a> > 
+        <span>More problems</span>
+    </nav>
+    <h1>Another enemy approaches...</h1>
+</header>
 
-        <h1>Another enemy approaches...</h1>
-        <hr>
-        
-        <p>
-            Your reflexes had always been pretty good, when the drowner attacks with its claws, you dodge it, getting yourself in the back of the drowner. The drowner immediately notices it
-            and rapidly turns around. By the time it did it completely, you already started running to the path with light ahead.
-            <br>
-            You run as if your live depended on it (it actually does) and reach the light you saw before. It was a bandit holding a lit torch. He tells you something but you are not listening to him.
-            You know what's behind you... What do you do?
-        </p>
-        <hr>
-        <img src = "../../../../../images/no_sword_bandit.jpg" alt = "Bandit encounter" width = "500" height = "300">
-        <ul>
+<main>
+    <article>
+
+        <section>
+            <p>
+                Your reflexes had always been pretty good. When the drowner attacks with its claws, you dodge it, getting yourself behind the creature. 
+                The drowner immediately notices and rapidly turns around, but by the time it does, you are already running toward the path with light ahead.
+            </p>
+        </section>
+
+        <details>
+            <summary>Quick thinking</summary>
+            <aside>
+                <i>
+                    Speed and awareness can sometimes compensate for the lack of a weapon. A well-timed dodge may be the only difference between survival and defeat.
+                </i>
+            </aside>
+        </details>
+
+        <section>
+            <p>
+                You run as if your life depended on it (it actually does) and reach the light you saw before. It is a bandit holding a lit torch. He tells you something, but you are not listening you know what’s behind you.  
+                What do you do?
+            </p>
+        </section>
+
+        <figure>
+            <img src="../../../../../images/no_sword_bandit.jpg" alt="Bandit encounter" width="500" height="300">
+            <figcaption>Between a monster and a stranger.</figcaption>
+        </figure>
+
+    </article>
+</main>
+
+<nav>
+    <ul>
+        <li><a href="./end/bad_ending.html">Convince him to help you</a></li>
+        <li><a href="./end/good_ending.html">Keep running</a></li>
         <br>
-            <li><a href = "./end/bad_ending.html">A. Convince him to help you defeat the drowner.</a></li>
-            <li><a href = "./end/good_ending.html">B. Keep running.</a></li>
-    </body>
+        <li><a href="../../../../index.html">Restart</a></li>
+    </ul>
+</nav>
+
+<footer>
+    <p>&emsp; <time>22:50</time> - Desperation grows.</p>
+    <label for="progress">You are this close to escaping Novigrad's sewers:</label>
+    <progress id="progress" value="70" max="100">70%</progress>
+</footer>
+
+</body>
 </html>
