--- a/first_decision/second_decision/sword/continue.html
+++ b/first_decision/second_decision/sword/continue.html
@@ -1,28 +1,67 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Back in action</title>
-    </head>
-    <body>
-        <header>
-            <a href="../../../index.html">Restart</a>
-        </header>
+<head>
+    <title>Back in action</title>
+</head>
+<body>
 
-        <h1>Back in action </h1>
-        <hr>
-        <p>
-            You are ready for the drowner thanks to the sword you found in the previous area. You swing your sword directly to the drowners neck but miss. Now you're exposed
-            and the drowner takes the chance to scratch you, fortunatelly, it only got your clothes as you moved right on time. You realize the drowner started to throw scratches and you need to
-            move quickly behind. Every scratch gets closer to you and somehow you manage to avoid them all, costing you some claws on your shirt. Finally, the drowner has got its guard down and its your
-            moment to attack, you swing the sword with all you've got to the drowners head and finally get rid of him.
-        </p>
-        <hr>
-        <br>
-        <img src = "../../../images/sword_drowner.webp" alt = "Defeated the drowner" width = "500" height = "300">
-        <br>
-        <ul>
-            <li><a href = "./bandit_encounter_sword/bandit_sword.html">Continue</a></li>
-        </ul>
+<header>
+    <nav>
+        <a href="../../../index.html">First scenario</a> >
+        <a href="../../drowner_encounter.html">Drowner encounter</a> >
+        <span>Glorious victory</span>
+    </nav>
+    <h1>Back in action</h1>
+</header>
 
-    </body>
+<main>
+    <article>
+
+        <section>
+            <p>
+                You are ready for the drowner thanks to the sword you found in the previous area. You swing your sword directly to the drowner's neck but miss. Now you're exposed
+                and the drowner takes the chance to scratch you. Fortunately, it only got your clothes as you moved right on time.
+            </p>
+        </section>
+
+        <details>
+            <summary>Combat Situation</summary>
+            <aside>
+                <i>
+                    Fighting in tight sewer spaces makes every movement risky.  One mistake can leave you exposed, and creatures like drowners are fast and relentless.
+                </i>
+            </aside>
+        </details>
+
+        <section>
+            <p>
+                You realize the drowner started to throw scratches and you need tomove quickly behind. Every scratch gets closer to you and somehow 
+                you manage to avoid them all, costing you some claws on your shirt. Finally, the drowner has got its guard down and it's your moment to attack. 
+                You swing the sword with all you've got to the drowner's head and finally get rid of him.
+            </p>
+        </section>
+
+        <figure>
+            <img src="../../../images/sword_drowner.webp" alt="Defeated the drowner" width="500" height="300">
+            <figcaption>You survived the encounter.</figcaption>
+        </figure>
+
+    </article>
+</main>
+
+<nav>
+    <ul>
+        <li><a href="./bandit_encounter_sword/bandit_sword.html">Continue</a></li>
+        <br>
+        <li><a href="../../../index.html">Restart</a></li>
+    </ul>
+</nav>
+
+<footer>
+    <p>&emsp; <time>22:40</time> - Victory... for now.</p>
+    <label for="progress">You are this close to escaping Novigrad's sewers:</label>
+    <progress id="progress" value="55" max="100">55%</progress>
+</footer>
+
+</body>
 </html>
